src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>New Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Attempted Contact</fullName>
        </values>
        <values>
            <fullName>Engaged</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Affiliate_RP_I_agree_to_program_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate RP I agree to program T &amp; C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Segment_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate Segment 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Segment_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate Segment 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate_Segment_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate Segment 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <picklist>
            <picklistValues>
                <fullName>2-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13-21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 or older</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allergies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appt_Set_Count__c</fullName>
        <formula>if( not(isnull(Date_BD_Set_Appt__c)),1,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appt Set Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Appt_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appt Set?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Notes__c</fullName>
        <label>Assessment Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <label>Assistant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Notes__c</fullName>
        <label>Hot Buttons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BD_Rep_Ext__c</fullName>
        <label>BD Rep Ext</label>
        <picklist>
            <picklistValues>
                <fullName>Al</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BD_Rep__c</fullName>
        <label>BD Rep*</label>
        <picklist>
            <picklistValues>
                <fullName>Al</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Josh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Koa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BD_Status__c</fullName>
        <label>BD Status</label>
        <picklist>
            <picklistValues>
                <fullName>1st Call | V1-E1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Call | noVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Call | V2-E2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Call | V3-E3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th Call | V4-E4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6th Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7th Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8th Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9th Call | V5-E5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Phone__c</fullName>
        <formula>case( Status ,&quot;10. Bad Phone Number&quot;,1,&quot;11. Bad Phone and email--- Bogus&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bad Phone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bed_in_Clinic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bed in Clinic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bed_in_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bed in Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_type__c</fullName>
        <label>Body type</label>
        <picklist>
            <picklistValues>
                <fullName>Small-Petite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A few extra pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRP_I_agree_to_program_T_C__c</fullName>
        <description>Consumer Referral Program picklist for Consumer to attest and agree to Program Terms and Conditions</description>
        <inlineHelpText>Consumer Referral Program picklist for Consumer to attest and agree to Program Terms and Conditions</inlineHelpText>
        <label>CRP I agree to program T &amp; C</label>
        <picklist>
            <picklistValues>
                <fullName>I agree to program terms and conditions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <label>Call Back Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Sign_Up_Date__c</fullName>
        <label>Channel Partner Sign Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chest_size__c</fullName>
        <label>Chest size</label>
        <picklist>
            <picklistValues>
                <fullName>30 or less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>53</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>54</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Web_2_Lead_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Web 2 Lead Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_Appt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Appt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coupon_Code_Used_to_Purchase__c</fullName>
        <description>Coupon Code Used to Purchase, Flows to Coupon Code on the Contact, which is used in templated emails where it pulls in their discount AKA Coupon Code that was used.</description>
        <inlineHelpText>Coupon Code Used to Purchase</inlineHelpText>
        <label>Coupon Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Mattress__c</fullName>
        <inlineHelpText>Find out what they are currently sleeping on. How old is it? Is it Sagging? What firmness is it? What did they like about it when it was new? What do they dislike about it now?</inlineHelpText>
        <label>Current Mattress</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DC_have_a_Facobook_Page__c</fullName>
        <label>DC have a Facobook Page?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_BD_Set_Appt__c</fullName>
        <label>Date BD Set Appt*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Enrollment_in_Referral_Program__c</fullName>
        <description>This field captures the date of the form submission for Referral Program enrollment.</description>
        <inlineHelpText>This field captures the date of the form submission for Referral Program enrollment.</inlineHelpText>
        <label>Date of Enrollment in Referral Program</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE( 
MOD( (  datevalue(CreatedDate)  ) - DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Until_Appt_Set__c</fullName>
        <formula>Date_BD_Set_Appt__c - datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Until Appt Set</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Until_Transferred__c</fullName>
        <formula>Transfer_SHOW_Date__c - datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Days Until Transferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Describe_your_sleeping_style__c</fullName>
        <label>Describe your sleeping style</label>
        <picklist>
            <picklistValues>
                <fullName>Side only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stomach only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side and Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Side and Stomach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back and Stomach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toss and turn from all positions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_they_want_to_schedule_an_appointment__c</fullName>
        <label>Schedule appt. w/ Kristen?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_plan_to_recommend_intelliBED__c</fullName>
        <label>Do you plan to recommend intelliBED?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure Yet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ducks_Couple_Both_DM_s_on_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ducks - Couple, Both DM&apos;s on Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ducks_Explanation_for_Setting_w_1_DM__c</fullName>
        <label>Ducks - Explanation for Setting w/ 1 DM</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ducks_Ok_with_2k_Pricing__c</fullName>
        <label>Ducks-Ok with 2k+ Pricing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ducks_Single_Sleeper_No_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ducks - Single Sleeper, No Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ducks_Watched_Video__c</fullName>
        <label>Ducks-Watched Video?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engaged_by_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the prospect engaged by a salesperson?</description>
        <inlineHelpText>Check the box if a salesperson has engaged and/or remains engaged with the prospect.</inlineHelpText>
        <label>Engaged by Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrolled_in_Referral_Program__c</fullName>
        <label>Enrolled in Referral Program?</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formerly Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned Mattress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <inlineHelpText>Enter known Facebook account(s), page(s)</inlineHelpText>
        <label>Facebook</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fibromyalgia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fibromyalgia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gel_Sample_Sent__c</fullName>
        <description>The date that we send the Gel Sample</description>
        <label>Gel Sample Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Google__c</fullName>
        <inlineHelpText>Enter known Google+ account(s)</inlineHelpText>
        <label>Google+</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HCP_Referral_Prog_Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HCP Referral Prog Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Segment_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New HCP
NO Training
NO Beds Sold</description>
        <inlineHelpText>New HCP
NO Training
NO Beds Sold</inlineHelpText>
        <label>HCP Segment 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Segment_2_Clinical_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Watched Training 
NO Beds Sold
NO Self-Purchase
Incentive = 50% Off Self-Purchase</description>
        <inlineHelpText>Watched Training 
NO Beds Sold
NO Self-Purchase
Incentive = 50% Off Self-Purchase</inlineHelpText>
        <label>HCP Segment 2 - Clinical Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Segment_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NO Beds Sold
NO Self-Purchase
NO Training</description>
        <inlineHelpText>NO Beds Sold
NO Self-Purchase
NO Training</inlineHelpText>
        <label>HCP Segment 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Segment_4__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NO Beds Sold
Self-Purchased Bed</description>
        <inlineHelpText>NO Beds Sold
Self-Purchased Bed</inlineHelpText>
        <label>HCP Segment 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Segment_5_Silver_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1 Bed Sold
Gamefication Driven
Incentive = Bucket of GelSamples w/ Carabiner</description>
        <inlineHelpText>1 Bed Sold
Gamefication Driven
Incentive = Bucket of GelSamples w/ Carabiner</inlineHelpText>
        <label>HCP Segment 5 - Silver Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Segment_6_Platinum_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(15 Beds Sold w/in 12 Months)
Status = Platinum Partner
Incentive = TBD (Free Bed/Equivalent Value)</description>
        <inlineHelpText>(15 Beds Sold w/in 12 Months)
Status = Platinum Partner
Incentive = TBD (Free Bed/Equivalent Value)</inlineHelpText>
        <label>HCP Segment 6 - Platinum Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCP_Segment_6_Senior_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Sold 5 Beds w/in 6 Months)
Status = Senior Partner
Incentive = Full Display</description>
        <inlineHelpText>(Sold 5 Beds w/in 6 Months)
Status = Senior Partner
Incentive = Full Display</inlineHelpText>
        <label>HCP Segment 6 - Senior Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCR_Script__c</fullName>
        <label>HCR Script</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heart_Disease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Heart Disease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <picklist>
            <picklistValues>
                <fullName>4&apos;10&quot; and under</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4&apos;11&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;1&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;2&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;3&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;4&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;5&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;6&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;7&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;8&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;9&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;10&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;11&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6&apos;1&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6&apos;2&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6&apos;3&apos;&apos;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6&apos;4&quot;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6&apos;5&quot; and over</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hips_Sciatica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hips/Sciatica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hospitality_Projects__c</fullName>
        <description>Projects the Hotel is planning over the next year</description>
        <inlineHelpText>Projects the Hotel is planning over the next year</inlineHelpText>
        <label>Hospitality Projects</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospitality_Purchases_next_12_months__c</fullName>
        <description>Projected Value of purchases over the next 12 months</description>
        <inlineHelpText>Projected Value of purchases over the next 12 months</inlineHelpText>
        <label>Hospitality Purchases next 12 months</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospitality_Type__c</fullName>
        <description>Type of Lodging/Hospitality Group</description>
        <inlineHelpText>Type of Lodging/Hospitality Group</inlineHelpText>
        <label>Hospitality Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hour_of_Day__c</fullName>
        <formula>IF(VALUE(MID(TEXT(CreatedDate),12,2))+7&lt;15,VALUE(MID(TEXT(CreatedDate),12,2))-8+24,VALUE(MID(TEXT(CreatedDate),12,2))-8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour of Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_can_we_help_you_reach_your_goals__c</fullName>
        <label>How can we help you reach your goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_hours_do_you_allow_for_sleep__c</fullName>
        <label>How many hours do you allow for sleep</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 4 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-6 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-8 hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 8 hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_practice_locations_do_you_ne__c</fullName>
        <label>How many locations need displays for?</label>
        <picklist>
            <picklistValues>
                <fullName>One location only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 or more (call to discuss our needs)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_visits_do_you_see_a_week__c</fullName>
        <label>How many visits do you see a week?</label>
        <picklist>
            <picklistValues>
                <fullName>Not sure.  I’m new in practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less then 50 visits per week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-100 Visits per week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-300 Visits per week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300-500 Visits per week.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater then 500 Visits per week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_do_they_send_out_a_news_letter__c</fullName>
        <label>How often do they send out a news letter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_old_is_your_current_bed__c</fullName>
        <label>How old is your current bed?</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 1 &amp; 5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Between 5 &amp; 10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 10 Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_old_is_your_current_mattress__c</fullName>
        <label>How old is your current mattress</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 year old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-5 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-8 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8-10 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 10 years old</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_agree_to_program_terms_and_conditions__c</fullName>
        <description>This field logs if participants have agreed to the terms and conditions of the HCP referral program.</description>
        <inlineHelpText>check one</inlineHelpText>
        <label>I agree to program terms and conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, I agree to the terms and conditions.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_consume_caffeine_or_sugar_within_6_hou__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I consume caffeine or sugar within 6 hou</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_eat_a_full_meal_2_hours_of_bedtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I eat a full meal 2 hours of bedtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_engage_in_stimulating_activities_1_you__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I engage in stimulating activities 1 you</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_exercise_within_3_hours_of_bedtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I exercise within 3 hours of bedtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_experience_tingling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I experience tingling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_feel_tired_of_groggy_during_the_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I feel tired of groggy during the day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_fight_to_stay_awake_during_the_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I fight to stay awake during the day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_difficulty_falling_staying_asleep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have difficulty falling/staying asleep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_have_trouble_concentrating_work_school__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I have trouble concentrating work/school</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_hold_my_breath_stop_breathing_at_night__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I hold my breath/stop breathing at night</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>